<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundBored</string>
    <string name="action_share">Share this app</string>
    <string name="title_section1">Rimshot</string>
    <string name="title_section2">Trombone</string>
    <string name="title_section3">Crickets</string>
    <string name="title_section4">Nope</string>
    <string name="button_description">It\'s a big button!</string>
    <string name="share_text">Check out this cool app - Rimshot, Crickets, and Sad Trombone sound effects for Android! Get it for free at https://play.google.com/store/apps/details?id=com.bri1.soundbored.reborn</string>
    <string name="whistle_desc">Whistle descending</string>

    <string name="credits">Credits</string>
    <string name="text_license">License: </string>
    <string name="text_license_link"><a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL v3</a></string>
    <string name="title_creators">Creators:</string>

    <string name="text_brian">Code written by <a  href="https://github.com/brinez">Brian Nezvadovitz</a> Copyright © 2012–2013</string>
    <string name="text_andrej">Ported to the modern Android version by <a href="https://github.com/andrewshadura">Andrej Shadura</a> Copyright © 2019</string>
    <string name="text_webcooltz">Forked for open source use by <a href="https://github.com/webcooltz">@webcooltz</a> Copyright © 2021</string>
    <string name="open_source_app"><a href="https://opensource.org">Open Source App</a></string>

    <string name="freeicon_drum"><div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="freeicon_cricket"><div>Icons made by <a href="https://www.flaticon.com/authors/amethystdesign" title="AmethystDesign">AmethystDesign</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="freeicon_trombone"><div>Icons made by <a href="https://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="freeicon_whistle"><div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="freeicon_total">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/amethystdesign" title="AmethystDesign">AmethystDesign</a>, <a href="https://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
</string>

    <string name="drum">drum</string>
    <string name="cricket">cricket</string>
    <string name="trombone">trombone</string>
    <string name="nope">nope</string>
    <string name="chicken_nug">chicken nugget</string>
    <string name="chipotle">chipotle</string>
    <string name="headbang">head bang</string>
    <string name="imjohncena">john cena flute</string>
    <string name="lemons">lemons</string>
    <string name="good_evening">good evening</string>
    <string name="ok">okay</string>
    <string name="roommates">roommates</string>

</resources>
