<androidx.gridlayout.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bulletin"
    >

    <ImageButton
        android:id="@+id/rimshot"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/drum"
        android:contentDescription="@string/drum" />

    <ImageButton
        android:id="@+id/crickets"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/grasshopper"
        android:contentDescription="@string/cricket" />

    <ImageButton
        android:id="@+id/trombone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/trombone"
        android:contentDescription="@string/trombone" />

    <ImageButton
        android:id="@+id/whistle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/whistle"
        android:contentDescription="@string/whistle_desc" />

    <ImageButton
        android:id="@+id/nope"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/nope"
        app:layout_column="0"
        app:layout_row="1"
        android:contentDescription="@string/nope" />

    <ImageButton
        android:id="@+id/chicken_nugget"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/chicken_nug"
        app:layout_column="1"
        app:layout_row="1"
        android:contentDescription="@string/chicken_nug" />

    <ImageButton
        android:id="@+id/chipotle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/chipotle"
        app:layout_column="2"
        app:layout_row="1"
        android:contentDescription="@string/chipotle" />

    <ImageButton
        android:id="@+id/headbang"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/head_bang"
        app:layout_column="3"
        app:layout_row="1"
        android:contentDescription="@string/headbang" />

    <ImageButton
        android:id="@+id/imjohncena"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/imjohncena"
        app:layout_column="0"
        app:layout_row="2"
        android:contentDescription="@string/imjohncena" />

    <ImageButton
        android:id="@+id/lemons"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/lemons"
        app:layout_column="1"
        app:layout_row="2"
        android:contentDescription="@string/lemons" />

    <ImageButton
        android:id="@+id/good_evening"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/goodevening"
        app:layout_column="2"
        app:layout_row="2"
        android:contentDescription="@string/good_evening" />

    <ImageButton
        android:id="@+id/ok"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ok"
        app:layout_column="3"
        app:layout_row="2"
        android:contentDescription="@string/ok" />

    <ImageButton
        android:id="@+id/roommates"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/roommates"
        app:layout_column="0"
        app:layout_row="3"
        android:contentDescription="@string/roommates" />

</androidx.gridlayout.widget.GridLayout>


