<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credits">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="190dp"
        android:padding="32dp"
        >

        <TextView
            android:id="@+id/title_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/credits"
            android:textSize="24sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/text_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_license"
            android:paddingTop="16dp"
            />

        <TextView
            android:id="@+id/text_brian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_brian"
            android:paddingTop="16dp"
            />

        <TextView
            android:id="@+id/text_andrej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_andrej" />

        <TextView
            android:id="@+id/text_tyler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tyler" />

        <TextView
            android:id="@+id/text_open_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_source_app"
            android:paddingTop="16dp"
            />

        <ImageView
            android:id="@+id/image_open_source"
            android:layout_width="47dp"
            android:layout_height="47dp"
            app:srcCompat="@drawable/opensource"
            android:contentDescription="@string/open_source_app"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>